# Polish_Calculator

./: .gitignore  CMakeLists.txt  calculator.cc  calculator.h  calculator_test.cc
MathOperations/: MathOperationDivision.cpp  MathOperationDivision.h  MathOperationMultiplication.cpp  MathOperationMultiplication.h  MathOperationSubtraction.cpp  MathOperationSubtraction.h  MathOperationsBase.cpp  MathOperationsBase.h  mathOperationAmount.cpp  mathOperationAmount.h
